--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         </activity>
         <activity
             android:name=".VoiceMemo"
-            android:label="@string/app_name">
+            android:label="@string/title_activity_voice"
+            android:theme="@style/Theme.AddEvent">
         </activity>
         <activity
             android:name="com.example.jaredfranze.hellow.Agenda"
