--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 18 01:03:32 CST 2014
-sdk.dir=F\:\\Program Files\\Android\\android-studio\\sdk
+#Thu Dec 04 09:09:44 CST 2014
+sdk.dir=/Users/izuchukwuelechi/Developer/Android/sdk
