Revert "Revert "LAST COMMIT""
This reverts commit 66e8ac0c9a259989d8a4fc130a588462846d33c1.

--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Dec 04 22:14:02 CST 2014
-sdk.dir=F\:\\Program Files\\Android\\android-studio\\sdk
+sdk.dir=C:\Users\andrei\AppData\Local\Android\android-studio
